# cellular-automata

./: pyproject.toml
cellular_automata/: engine.py  simulation.py  video.py
cellular_automata/dynamics/: trinary_wave.py  wave.py
scripts/: bump.py  trinary_pulse.py  two_slits.py  wave.py
